--- a/requirements.txt
+++ b/requirements.txt
@@ -1,148 +1,132 @@
-accelerate==1.1.1
-annoy==1.17.3
-anyio==4.6.2.post1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-comm==0.2.2
-contourpy==1.3.0
-cupy-cuda12x==13.3.0
-cycler==0.12.1
-debugpy==1.8.8
-decorator==5.1.1
-defusedxml==0.7.1
-exceptiongroup==1.2.2
-executing==2.1.0
-faiss-gpu==1.7.2
-fastjsonschema==2.20.0
-fastrlock==0.8.2
-filelock==3.13.1
-fonttools==4.55.1
-fqdn==1.5.1
-fsspec==2024.2.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.27.2
-huggingface-hub==0.26.2
-idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.18.1
-ipywidgets==8.1.5
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.3
-joblib==1.4.2
-json5==0.9.28
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.6
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-kiwisolver==1.4.7
-MarkupSafe==2.1.5
-matplotlib==3.9.3
-matplotlib-inline==0.1.7
-memory-profiler==0.61.0
-mistune==3.0.2
-mpmath==1.3.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==2.0.2
-nvidia-cublas-cu12==12.4.2.65
-nvidia-cuda-cupti-cu12==12.4.99
-nvidia-cuda-nvrtc-cu12==12.4.99
-nvidia-cuda-runtime-cu12==12.4.99
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.0.44
-nvidia-curand-cu12==10.3.5.119
-nvidia-cusolver-cu12==11.6.0.99
-nvidia-cusparse-cu12==12.3.0.142
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvtx-cu12==12.4.99
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.3.6
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycparser==2.22
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.21.0
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.13.1
-Send2Trash==1.8.3
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
-sympy==1.13.1
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.20.3
-tomli==2.1.0
-torch==2.4.0+cu124
-torchaudio==2.4.0+cu124
-torchvision==0.19.0+cu124
-tornado==6.4.1
-tqdm==4.67.0
-traitlets==5.14.3
-transformers==4.46.2
-triton==3.0.0
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.9.0
-tzdata==2024.2
-uri-template==1.3.0
-urllib3==2.2.3
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-widgetsnbextension==4.0.13
-zipp==3.21.0
+accelerate
+annoy
+anyio
+arrow
+asttokens
+async-lru
+attrs
+babel
+beautifulsoup4
+bleach
+certifi
+cffi
+charset-normalizer
+comm
+contourpy
+cycler
+debugpy
+decorator
+defusedxml
+exceptiongroup
+executing
+faiss-gpu
+fastjsonschema
+fastrlock
+filelock
+fonttools
+fqdn
+fsspec
+h11
+httpcore
+httpx
+huggingface-hub
+idna
+importlib_metadata
+importlib_resources
+ipykernel
+ipython
+ipywidgets
+isoduration
+jedi
+Jinja2
+joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
+jupyter
+jupyter-console
+jupyter-events
+jupyter-lsp
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab_pygments
+jupyterlab_server
+jupyterlab_widgets
+kiwisolver
+MarkupSafe
+matplotlib
+matplotlib-inline
+memory-profiler
+mistune
+mpmath
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+networkx
+notebook
+notebook_shim
+numpy
+overrides
+packaging
+pandas
+pandocfilters
+parso
+pexpect
+pillow
+platformdirs
+prometheus_client
+prompt_toolkit
+psutil
+ptyprocess
+pure_eval
+pycparser
+Pygments
+pyparsing
+python-dateutil
+python-json-logger
+pytz
+PyYAML
+pyzmq
+referencing
+regex
+requests
+rfc3339-validator
+rfc3986-validator
+rpds-py
+safetensors
+scikit-learn
+scipy
+Send2Trash
+six
+sniffio
+soupsieve
+stack-data
+sympy
+terminado
+threadpoolctl
+tinycss2
+tokenizers
+tomli
+torch
+torchaudio
+torchvision
+tornado
+tqdm
+traitlets
+transformers
+triton
+typing_extensions
+tzdata
+uri-template
+urllib3
+wcwidth
+webcolors
+webencodings
+websocket-client
+widgetsnbextension
+zipp
